kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 22i1056/cs4067-assgt-eventbooking-22i-1056-muhammadahmad-repo-booking-service:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: booking-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30003
