kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-deployment
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1056/cs4067-assgt-eventbooking-22i-1056-muhammadahmad-repo-event-service:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
          
---

apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: event-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
