kubernetes/deployment-service-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          ports:
            - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
