kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 22i1056/cs4067-assgt-eventbooking-22i-1056-muhammadahmad-repo-notification-service:latest
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          ports:
            - containerPort: 8085
---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
