kubernetes/deployment-service-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
