kubernetes/deployment-service-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 5672
            - containerPort: 15672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
    - name: rabbitmq-5672
      protocol: TCP
      port: 5672
      targetPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
    - name: rabbitmq-15672
      protocol: TCP
      port: 15672
      targetPort: 15672
