kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      namespace: onlineeventbookingmuhammadahmad
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 22i1056/cs4067-assgt-eventbooking-22i-1056-muhammadahmad-repo-user-service:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingmuhammadahmad
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
